new proj/src/objects/Account_Modification_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Request__c</fullName>
        <label>Account Request #</label>
        <referenceTo>Account_Request__c</referenceTo>
        <relationshipLabel>Account Modification Notes</relationshipLabel>
        <relationshipName>Account_Modification_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CMF Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Modification Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Request Note #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Modification Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>